fixed buttons layout problem

--- a/src/styles/components/_Button.scss
+++ b/src/styles/components/_Button.scss
@@ -1,5 +1,4 @@
 .Button {
-  height: 32px;
   font-family: $main-font-family;
   cursor: pointer;
   background-color: $background-color;
